# rust-api-example

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  rustfmt.toml
.circleci/: config.yml
src/: main.rs
src/app/: domain.rs  mod.rs  repo.rs  request.rs  response.rs  routes.rs
src/app/db/: mod.rs  user.rs
src/templates/: index.html.hbs
