[package]
name = "rust-api-example"
version = "0.1.0"
authors = ["Kersul <joaohkfaria@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.0.0-alpha.1"
tokio = { version = "1.5.0", features = ["full"] }
