[package]
name = "rust-api-example"
version = "1.0.0"
authors = ["Kersul <joaohkfaria@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.79"
mongodb = "2.0.2"
tokio = { version = "1.16.1", features = ["full"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }

